[package]
name = "gql_api_tester"
version = "0.1.0"
edition = "2021"
rust-version = "1.58.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.7", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
